// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ExperienceItem component should render correctly 1`] = `
<div>
  <div
    class="w-auto"
  >
    <p
      class="uppercase text-sm text-ring mb-1.5"
    >
      Check out
    </p>
    <button
      class="capitalize w-auto border-b-1 pr-5 border-transparent hover:text-accent-foreground hover:border-accent-foreground"
    >
      Top Camping Sites
    </button>
  </div>
</div>
`;

exports[`ExperienceItem component should render with active true 1`] = `
<div>
  <div
    class="w-auto"
  >
    <p
      class="uppercase text-sm text-ring mb-1.5"
    >
      Check out
    </p>
    <button
      class="capitalize w-auto border-b-1 pr-5 border-transparent hover:text-accent-foreground hover:border-accent-foreground text-accent-foreground border-b-accent-foreground"
    >
      Top Camping Sites
    </button>
  </div>
</div>
`;

exports[`ExperienceItem component should render with only title 1`] = `
<div>
  <div
    class="w-auto"
  >
    <button
      class="capitalize w-auto border-b-1 pr-5 border-transparent hover:text-accent-foreground hover:border-accent-foreground"
    >
      Top Camping Sites
    </button>
  </div>
</div>
`;
